# python-section

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  pyproject.toml
src/descriptors/: models.py
src/descriptors/tests/: test_models.py
src/design/: messages.py  orders.py
src/iterators/: utils.py
src/iterators/tests/: test_utils.py
src/solid_violation/: dip.violation.py  isp_violation.py  lsp_violation.py  ocp_violation.py  srp_violation.py
src/wallets/: currency.py  exceptions.py  money.py
src/wallets/tests/: test_money.py
