[tool.poetry]
name = "python-section"
version = "1.0"
description = ""
authors = ["Eugene Mozge"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pydantic = "^2.11.5"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-sugar = "^1.0.0"
pytest-clarity = "^1.0.1"
pytest-mock = "^3.14.0"
black = "^25.1.0"
pre-commit = "^4.2.0"
isort = "^6.0.1"
flake8 = "^7.2.0"
flake8-pyproject = "^1.2.3"
flake8-pytest-style = "^2.1.0"
autoflake = "^2.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
known_first_party = "poetry"


[tool.flake8]
max-line-length = 120
exclude = [
    ".git",
    ".gitignore",
    "__pycache__",
    "*.py[co]",
    "venv",
    ".pytest_cache",
    ".env",
    "conftest.py"
]
extend-ignore = [
    "PT006",
    "PT011",
    "F405"
]

[tool.pytest.ini_options]
pythonpath = "."
python_files = [
    "tests.py",
    "test.py",
    "*_tests.py",
    "test_*.py",
]
addopts = [
    "--color=yes",
    "-vv",
    "-s",
]
